k8s/nacos/nacos-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nacos-deployment
  namespace: devops
spec:
  replicas: 1
  template:
    metadata:
      labels:
        service: nacos
        app: nacos
    spec:
      containers:
        #nacos-mysql
        - image: nacos/nacos-mysql:5.7
          imagePullPolicy: Always
          name: nacos-mysql
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: nacos-pv
              subPath: mysql
          ports:
            - containerPort: 3306
              name: "mysql-port"
        #nacos
        - image: nacos/nacos-server:latest
          imagePullPolicy: Always
          name: nacos-server
          ports:
            - containerPort: 8848
              name: "nacos-port"
          volumeMounts:
            - mountPath: /home/nacos/logs
              name: nacos-pv
              subPath: logs
            - name: nacos-config
              mountPath: /home/nacos/init.d/custom.properties
              subPath: custom.properties
            - mountPath: /etc/localtime
              name: nacostime
      volumes:
        - name: nacos-pv
          persistentVolumeClaim:
            claimName: nacos-pvc
        - name: nacos-config
          configMap:
            name: nacos-custom.properties
        - name: nacostime
          hostPath:
            path: /etc/localtime
