k8s/nacos/nacos-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nacos-service
  namespace: devops
spec:
  type: NodePort
  ports:
    - port: 3306
      targetPort: 3306
      nodePort: 31255
      name: "nacos-mysql-port"
    - port: 8848
      targetPort: 8848
      nodePort: 31256
      name: "nacos-port"
  selector:
    app: nacos
