k8s/nacos/依赖外部mysql数据库部署nacos.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nacos
  namespace: nacos-test
  labels:
    app: nacos
spec:
  type: NodePort
  ports:
    - port: 8848
      name: server
      targetPort: 8848
      nodePort: 30042
    - port: 7848
      name: rpc
      targetPort: 7848
      nodePort: 30043
  selector:
    app: nacos
---
apiVersion: v1
kind: Service
metadata:
  name: nacos-headless
  namespace: nacos-test
  labels:
    app: nacos
#  annotations:
#    解决k8s的statefulset里的pod如果不ready就ping不通对方
#    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
spec:
  ports:
    - port: 8848
      name: server
      targetPort: 8848
    - port: 7848
      name: rpc
      targetPort: 7848
  clusterIP: None
  selector:
    app: nacos
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nacos
  namespace: nacos-test
spec:
  serviceName: nacos-headless
  replicas: 1
  template:
    metadata:
      labels:
        app: nacos
      annotations:
        pod.alpha.kubernetes.io/initialized: "true"
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: "app"
                    operator: In
                    values:
                      - nacos
              topologyKey: "kubernetes.io/hostname"
      #      serviceAccountName: nfs-client-provisioner
      #      initContainers:
      #        - name: peer-finder-plugin-install
      #          image: nacos/nacos-peer-finder-plugin:1.0
      #          imagePullPolicy: Always
      #          volumeMounts:
      #            - mountPath: "/home/nacos/plugins/peer-finder"
      #              name: plugindir
      containers:
        - name: nacos
          imagePullPolicy: Always
          image: nacos/nacos-server:latest
          resources:
            requests:
              memory: "2Gi"
              cpu: "500m"
          ports:
            - containerPort: 8848
              name: client-port
            - containerPort: 7848
              name: rpc
          volumeMounts:
            #            - name: plugindir
            #              mountPath: /home/nacos/plugins/peer-finder
            #            - name: datadir
            #              mountPath: /home/nacos/data
            - name: logdir
              mountPath: /home/nacos/logs
  volumeClaimTemplates:
    #    - metadata:
    #        name: plugindir
    #        annotations:
    #          volume.beta.kubernetes.io/storage-class: "nfs-client"
    #      spec:
    #        accessModes: [ "ReadWriteMany" ]
    #        resources:
    #          requests:
    #            storage: 10Gi
    #    - metadata:
    #        name: datadir
    #        annotations:
    #          volume.beta.kubernetes.io/storage-class: "nfs-client"
    #      spec:
    #        accessModes: [ "ReadWriteMany" ]
    #        resources:
    #          requests:
    #            storage: 10Gi
    - metadata:
        name: logdir
        annotations:
          volume.beta.kubernetes.io/storage-class: "nfs-client"
      spec:
        accessModes: [ "ReadWriteMany" ]
        resources:
          requests:
            storage: 10Gi
  selector:
    matchLabels:
      app: nacos
